[se-journey] Add content from gitbook

--- a/docs/templates/issue/index.html
+++ b/docs/templates/issue/index.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="/se-journey/images/favicon.png" type="image/png">
 
-    <title>Tags :: Software Engineer Journey</title>
+    <title>Issue :: Software Engineer Journey</title>
 
     
     <link href="/se-journey/css/nucleus.css?1586800693" rel="stylesheet">
@@ -33,7 +33,7 @@
     </style>
     
   </head>
-  <body class="" data-url="/se-journey/tags/">
+  <body class="" data-url="/se-journey/templates/issue/">
     <nav id="sidebar" class="">
 
 
@@ -361,7 +361,7 @@
   
     
     <li data-nav-id="/se-journey/templates/" title="Templates" class="dd-item 
-        
+        parent
         
         
         ">
@@ -387,7 +387,7 @@
  
   
     
-      <li data-nav-id="/se-journey/templates/issue/" title="Issue" class="dd-item ">
+      <li data-nav-id="/se-journey/templates/issue/" title="Issue" class="dd-item active">
         <a href="/se-journey/templates/issue/">
         Issue
         
@@ -527,7 +527,13 @@
             
           
           
-            <a href='/se-journey/'>Software Engineer Journey</a> > Tags
+            
+            
+          
+          
+            <a href='/se-journey/'>Software Engineer Journey</a> > <a href='/se-journey/templates/'>Templates</a> > Issue
+          
+         
           
          
           
@@ -538,7 +544,18 @@
                 
                     <div class="progress">
     <div class="wrapper">
-
+<nav id="TableOfContents">
+  <ul>
+    <li><a href="#im-submitting-a-">I&rsquo;m submitting a &hellip;</a></li>
+    <li><a href="#what-is-the-current-behavior">What is the current behavior?</a></li>
+    <li><a href="#any-logs-error-output-etc">Any logs, error output, etc?</a></li>
+    <li><a href="#what-are-the-steps-to-reproduce-this-issue">What are the steps to reproduce this issue?</a></li>
+    <li><a href="#what-is-the-expected-behavior">What is the expected behavior?</a></li>
+    <li><a href="#what-is-the-motivation--use-case-for-changing-the-behavior">What is the motivation / use case for changing the behavior?</a></li>
+    <li><a href="#please-tell-us-about-your-environment">Please tell us about your environment:</a></li>
+    <li><a href="#other-information">Other information</a></li>
+  </ul>
+</nav>
     </div>
 </div>
 
@@ -554,7 +571,7 @@
           
             <h1>
               
-              Tags
+              Issue
             </h1>
           
 
@@ -562,15 +579,39 @@
 
 
 
-
-
-
+<h2 id="im-submitting-a-">I&rsquo;m submitting a &hellip;</h2>
 <ul>
-	
+<li><input disabled="" type="checkbox"> bug report</li>
+<li><input disabled="" type="checkbox"> feature request</li>
+<li><input disabled="" type="checkbox"> support request</li>
 </ul>
+<h2 id="what-is-the-current-behavior">What is the current behavior?</h2>
+<p>…</p>
+<p><strong>If the current behavior is a bug, please provide the steps to reproduce and if possible a minimal demo of the problem</strong> via <a href="https://plnkr.co">https://plnkr.co</a> or similar (you can use this template as a starting point: <a href="http://plnkr.co/edit/tpl:AvJOMERrnz94ekVua0u5)">http://plnkr.co/edit/tpl:AvJOMERrnz94ekVua0u5)</a>.</p>
+<h2 id="any-logs-error-output-etc">Any logs, error output, etc?</h2>
+<p>(If it’s long, please paste to <a href="https://ghostbin.com/">https://ghostbin.com/</a> and insert the link here.)</p>
+<h2 id="what-are-the-steps-to-reproduce-this-issue">What are the steps to reproduce this issue?</h2>
+<ol>
+<li>…</li>
+<li>…</li>
+<li>…</li>
+</ol>
+<h2 id="what-is-the-expected-behavior">What is the expected behavior?</h2>
+<p>…</p>
+<h2 id="what-is-the-motivation--use-case-for-changing-the-behavior">What is the motivation / use case for changing the behavior?</h2>
+<h2 id="please-tell-us-about-your-environment">Please tell us about your environment:</h2>
+<ul>
+<li><strong>Version</strong>: 2.0.0-beta.X</li>
+<li><strong>Browser</strong>: [all | Chrome XX | Firefox XX | IE XX | Safari XX | Mobile Chrome XX | Android X.X Web Browser | iOS XX Safari | iOS XX UIWebView | iOS XX WKWebView ]</li>
+<li><strong>Operating System:</strong></li>
+<li><strong>Language</strong>: [all | TypeScript X.X | ES6/7 | ES5 | Dart]</li>
+<li><strong>SDK Version</strong></li>
+</ul>
+<h2 id="other-information">Other information</h2>
+<p>Detailed explanation, stacktraces, related issues, suggestions how to fix, links for us to have context (eg. stackoverflow, gitter, etc)</p>
 
 
-<footer class=" footline" >
+<footer class="footline">
 	
 </footer>
 
@@ -784,6 +825,7 @@
             
                 
                     
+                    
                 
                 
 
@@ -796,6 +838,7 @@
             
             
                 
+                    
                     
                 
                 
@@ -812,6 +855,9 @@
             
             
                 
+                    
+                        
+                        
                     
                 
                 
@@ -894,3 +940,4 @@
 
   </body>
 </html>
+
